--- a/PetFinder/View/Base.lproj/Main.storyboard
+++ b/PetFinder/View/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Miles" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="S3G-jq-NYL">
                                                 <rect key="frame" x="220" y="0.0" width="55" height="50"/>
                                                 <color key="backgroundColor" red="0.1064236111" green="0.094675925930000002" blue="0.097691993510000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                                 <connections>
@@ -878,6 +878,10 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e16-dq-9qe" userLabel="Image + Status/FAV/PICS">
                                                 <rect key="frame" x="0.0" y="0.0" width="355" height="355"/>
                                                 <subviews>
+                                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="jTh-aM-tG7">
+                                                        <rect key="frame" x="159" y="159" width="37" height="37"/>
+                                                        <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </activityIndicatorView>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CbF-xT-816">
                                                         <rect key="frame" x="0.0" y="0.0" width="355" height="355"/>
                                                         <color key="backgroundColor" red="0.94509803920000002" green="0.058823529409999999" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -885,10 +889,6 @@
                                                             <constraint firstAttribute="width" secondItem="CbF-xT-816" secondAttribute="height" multiplier="1:1" id="zp3-yd-wdG"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="jTh-aM-tG7">
-                                                        <rect key="frame" x="159" y="159" width="37" height="37"/>
-                                                        <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </activityIndicatorView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Av3-58-Xtg">
                                                         <rect key="frame" x="35.666666666666657" y="330" width="284" height="50"/>
                                                         <subviews>
@@ -1024,7 +1024,7 @@
                                                         <rect key="frame" x="0.0" y="249.00000000000003" width="355" height="442.66666666666674"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xdm-ec-2zd">
-                                                                <rect key="frame" x="0.0" y="328.33333333333326" width="355" height="114.33333333333331"/>
+                                                                <rect key="frame" x="0.0" y="328.66666666666674" width="355" height="114"/>
                                                                 <color key="backgroundColor" red="0.17254901959999999" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </view>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ibE-eB-Q1d">
